force-app/main/default/objects/UserResponse__c/UserResponse__c.object-meta.xml
<CustomObject>
    <label>UserResponse</label>
    <nameField>
        <label>UserResponse名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserResponse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>