force-app/main/default/objects/UserResponse__c/fields/bond_number__c.field-meta.xml
<CustomField>
    <fullName>bond_number__c</fullName>
    <label>証券番号</label>
    <length>10</length>
    <type>Text</type>
</CustomField>