force-app/main/default/objects/UserResponse__c/fields/carModel__c.field-meta.xml
<CustomField>
    <fullName>carModel__c</fullName>
    <label>型式</label>
    <length>20</length>
    <type>Text</type>
</CustomField>