force-app/main/default/objects/UserResponse__c/fields/carName__c.field-meta.xml
<CustomField>
    <fullName>carName__c</fullName>
    <label>車名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>