force-app/main/default/objects/UserResponse__c/fields/carNumber__c.field-meta.xml
<CustomField>
    <fullName>carNumber__c</fullName>
    <label>ナンバー</label>
    <length>20</length>
    <type>Text</type>
</CustomField>