force-app/main/default/objects/UserResponse__c/fields/carShape__c.field-meta.xml
<CustomField>
    <fullName>carShape__c</fullName>
    <label>形状</label>
    <length>20</length>
    <type>Text</type>
</CustomField>