force-app/main/default/objects/UserResponse__c/fields/carType__c.field-meta.xml
<CustomField>
    <fullName>carType__c</fullName>
    <label>自動車の種別</label>
    <length>20</length>
    <type>Text</type>
</CustomField>