force-app/main/default/objects/UserResponse__c/fields/contactNumber__c.field-meta.xml
<CustomField>
    <fullName>contactNumber__c</fullName>
    <label>日中連絡先</label>
    <length>20</length>
    <type>Text</type>
</CustomField>