force-app/main/default/objects/UserResponse__c/fields/dateFirstRegistration__c.field-meta.xml
<CustomField>
    <fullName>dateFirstRegistration__c</fullName>
    <label>初度登録年月</label>
    <length>20</length>
    <type>Text</type>
</CustomField>