force-app/main/default/objects/UserResponse__c/fields/deliveryDate__c.field-meta.xml
<CustomField>
    <fullName>deliveryDate__c</fullName>
    <label>納車日</label>
    <length>20</length>
    <type>Text</type>
</CustomField>