force-app/main/default/objects/UserResponse__c/fields/expirationDate__c.field-meta.xml
<CustomField>
    <fullName>expirationDate__c</fullName>
    <label>車検満了日</label>
    <type>Date</type>
</CustomField>