force-app/main/default/objects/UserResponse__c/fields/fuelType__c.field-meta.xml
<CustomField>
    <fullName>fuelType__c</fullName>
    <label>燃料種類</label>
    <length>20</length>
    <type>Text</type>
</CustomField>