force-app/main/default/objects/UserResponse__c/fields/isCarInsurance__c.field-meta.xml
<CustomField>
    <fullName>isCarInsurance__c</fullName>
    <label>車両保険付帯</label>
    <length>20</length>
    <type>Text</type>
</CustomField>