force-app/main/default/objects/UserResponse__c/fields/isChangeAddress__c.field-meta.xml
<CustomField>
    <fullName>isChangeAddress__c</fullName>
    <label>住所変更有無</label>
    <length>50</length>
    <type>Text</type>
</CustomField>