force-app/main/default/objects/UserResponse__c/fields/isChangeMeigi__c.field-meta.xml
<CustomField>
    <fullName>isChangeMeigi__c</fullName>
    <label>名義変更有無</label>
    <length>100</length>
    <type>Text</type>
</CustomField>