force-app/main/default/objects/UserResponse__c/fields/isConnected__c.field-meta.xml
<CustomField>
    <fullName>isConnected__c</fullName>
    <label>コネクティッド</label>
    <length>20</length>
    <type>Text</type>
</CustomField>