force-app/main/default/objects/UserResponse__c/fields/isHybrid__c.field-meta.xml
<CustomField>
    <fullName>isHybrid__c</fullName>
    <label>ハイブリッド車</label>
    <length>20</length>
    <type>Text</type>
</CustomField>