force-app/main/default/objects/UserResponse__c/fields/isWelfare__c.field-meta.xml
<CustomField>
    <fullName>isWelfare__c</fullName>
    <label>福祉車両割引</label>
    <length>20</length>
    <type>Text</type>
</CustomField>