force-app/main/default/objects/UserResponse__c/fields/messagingSessionId__c.field-meta.xml
<CustomField>
    <fullName>messagingSessionId__c</fullName>
    <label>messagingSessionId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>