force-app/main/default/objects/UserResponse__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <externalId>true</externalId>
    <label>契約者名</label>
    <length>20</length>
    <type>Text</type>
</CustomField>