force-app/main/default/objects/UserResponse__c/fields/newAddress__c.field-meta.xml
<CustomField>
    <fullName>newAddress__c</fullName>
    <label>新住所</label>
    <length>50</length>
    <type>Text</type>
</CustomField>