force-app/main/default/objects/UserResponse__c/fields/newPrice__c.field-meta.xml
<CustomField>
    <fullName>newPrice__c</fullName>
    <label>新価特約付帯</label>
    <length>10</length>
    <type>Text</type>
</CustomField>