force-app/main/default/objects/UserResponse__c/fields/registerDate__c.field-meta.xml
<CustomField>
    <fullName>registerDate__c</fullName>
    <label>登録年月日</label>
    <length>20</length>
    <type>Text</type>
</CustomField>