force-app/main/default/objects/UserResponse__c/fields/SendSummary_Flag__c.field-meta.xml
<CustomField>
    <fullName>SendSummary_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendSummary_Flag</label>
    <type>Checkbox</type>
</CustomField>