force-app/main/default/objects/UserResponse__c/fields/sessionId__c.field-meta.xml
<CustomField>
    <fullName>sessionId__c</fullName>
    <label>sessionId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>