force-app/main/default/objects/UserResponse__c/fields/summary__c.field-meta.xml
<CustomField>
    <fullName>summary__c</fullName>
    <label>summary</label>
    <length>250</length>
    <type>Text</type>
</CustomField>