force-app/main/default/objects/UserResponse__c/fields/vehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>vehicleNumber__c</fullName>
    <label>車台番号</label>
    <length>20</length>
    <type>Text</type>
</CustomField>