force-app/main/default/objects/UserResponse__c/listViews/Group_UserResponse.listView-meta.xml
<ListView>
    <fullName>Group_UserResponse</fullName>
    <filterScope>Queue</filterScope>
    <label>カスタマーサービス</label>
    <queue>Group</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>